--- a/the-ordinary.html
+++ b/the-ordinary.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Ordinary</title>
     <link rel="stylesheet" href="styles/reset.css">
+    <link rel="stylesheet" href="styles/fonts.css">
 </head>
 <body>
     <div id="wrapper">
