Update resume content

--- a/resume.html
+++ b/resume.html
@@ -13,15 +13,6 @@
             <main>
                 <h1>RESUME</h1>
 
-                <div id="contact-info">
-                    <h2>Contact Information</h2>
-                    <ul>
-                        <li>Email: <a href="mailto:qtk23@drexel.edu">qtk23@drexel.edu</a></li>
-                        <li>GitHub: <a href="https://github.com/quinnkhuc" target="_blank">github.com/quinnkhuc</a></li>
-                        <li>LinkedIn: <a href="https://www.linkedin.com/in/quinnkhuc/" target="_blank">linkedin.com/in/quinnkhuc</a></li>
-                    </ul>
-                </div>
-
                 <div id="education">
                     <h2>Education</h2>
                     <ul>
@@ -41,10 +32,9 @@
                 <div id="skills">
                     <h2>Skills</h2>
                     <ul>
-                        <li>HTML5 / CSS3</li>
-                        <li>JavaScript (React.js)</li>
-                        <li>WordPress</li>
-                        <li>Photoshop / Illustrator</li>
+                        <li>Languages: HTML, CSS, JavaScript, C++</li>
+                        <li>Frameworks / Extensions: Sass, React.js</li>
+                        <li>Tools: Git, GitHub, WordPress, Adobe Creative Cloud</li>
                     </ul>
                 </div>
 
@@ -58,7 +48,6 @@
                             <ul>
                                 <li>Redesign Drexel Nanomaterials Group website</li>
                                 <li>Maintain and update group's website using WordPress</li>
-                                <li>Manage group's social media accounts</li>
                             </ul>
                         </li>
                         <li>
@@ -72,6 +61,23 @@
                             </ul>
                         </li>
                     </ul>
+                </div>
+
+                <div id="honors-awards">
+                    <h2>Honors &amp; Awards</h2>
+                    <li>A.J. Drexel Scholarship</li>
+                    <li>Westphal Portfolio Scholarship</li>
+                    <li>Phi Theta Kappa Scholarship</li>
+                    <li>Camden County College Honors Certificate</li>
+                </div>
+
+                <div id="relevant-coursework">
+                    <h2>Relevant Coursework</h2>
+                    <li>Web Design I, II</li>
+                    <li>Scripting for Interactive Digital Media I</li>
+                    <li>Human Factors Engineering</li>
+                    <li>Design Thinking in Product Design</li>
+                    <li>User Interface Design I, II</li>
                 </div>
 
                 <div id="download-link">
