Add hamburger menu

--- a/the-ordinary.html
+++ b/the-ordinary.html
@@ -153,6 +153,9 @@
                         </li>
                     </ul>
                 </nav>
+                <div id="hamburger-menu">
+                    <img src="images/hamburger-menu.png" alt="Hamburger Menu"/>
+                </div>
             </header>
         </div>
 
