--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
                         </li>
                     </ul>
                 </nav>
+                <div id="hamburger-menu">
+                    <img src="images/hamburger-menu.png" alt="Hamburger Menu"/>
+                </div>
             </header>
         </div>
 
