--- a/resume.html
+++ b/resume.html
@@ -104,6 +104,9 @@
                         </li>
                     </ul>
                 </nav>
+                <div id="hamburger-menu">
+                    <img src="images/hamburger-menu.png" alt="Hamburger Menu"/>
+                </div>
             </header>
         </div>
 
