--- a/resume.html
+++ b/resume.html
@@ -6,6 +6,7 @@
     <title>Resume</title>
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/fonts.css">
+    <link rel="stylesheet" href="styles/global.css">
 </head>
 <body>
     <div id="wrapper">
