--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div id="header">
             <header>
                 <div id="logo">
-                    <a href="index.html">Quinn Khuc</a>
+                    <a href="index.html">QUINN KHUC</a>
                 </div>
                 <nav>
                     <ul>
