--- a/the-ordinary.html
+++ b/the-ordinary.html
@@ -139,7 +139,7 @@
         <div id="header">
             <header>
                 <div id="logo">
-                    <a href="index.html">Quinn Khuc</a>
+                    <a href="index.html">QUINN KHUC</a>
                 </div>
                 <nav>
                     <ul>
