--- a/resume.html
+++ b/resume.html
@@ -20,12 +20,12 @@
                         <h2><b id="education">EDUCATION</b></h2>
                         <ul>
                             <li>
-                                <h3>Drexel University, PA</h3>
+                                <h3>Drexel University, Philadelphia, PA</h3>
                                 <p>B.S. in Interactive Digital Media</p>
                                 <p>Anticipated Graduation: 06/2024</p>
                             </li>
                             <li>
-                                <h3>Camden County College, NJ</h3>
+                                <h3>Camden County College, Blackwood, NJ</h3>
                                 <p>A.A. in Computer Graphics</p>
                                 <p>01/2019 - 08/2020</p>
                             </li>
@@ -45,7 +45,7 @@
                         <h2><b id="work-experience">WORK EXPERIENCE</b></h2>
                         <ul>
                             <li>
-                                <h3>Drexel Nanomaterials Institute, PA</h3>
+                                <h3>Drexel Nanomaterials Institute, Philadelphia, PA</h3>
                                 <p class="job-title">Undergraduate Assistant</p>
                                 <p>12/2020 - Present</p>
                                 <ul>
@@ -54,7 +54,7 @@
                                 </ul>
                             </li>
                             <li>
-                                <h3>Camden County College, NJ</h3>
+                                <h3>Camden County College, Blackwood, NJ</h3>
                                 <p class="job-title">Tutor</p>
                                 <p>09/2019 - 03/2020</p>
                                 <ul>
@@ -84,6 +84,7 @@
                             <li class="list">Human Factors Engineering</li>
                             <li class="list">Design Thinking in Product Design</li>
                             <li class="list">User Interface Design I, II</li>
+                            <li class="list">Design for Media I, II</li>
                         </ul>
                     </div>
                 </div>
