--- a/the-ordinary.html
+++ b/the-ordinary.html
@@ -162,7 +162,7 @@
 
         <div id="footer">
             <footer>
-                <p>Copyright &copy; 2021 Quinn Khuc.</p>
+                <p>Check out the code for this website on <a href="https://github.com/quinnkhuc/IDM222-qtk23" target="_blank" class="link">GitHub</a></p>
             </footer>
         </div>
     </div>
