--- a/resume.html
+++ b/resume.html
@@ -89,7 +89,7 @@
                     </div>
                 </div>
 
-                <div id="download-link">
+                <div id="download-link" class="link">
                     <p><a href="assets/quinn-khuc-resume.pdf" target="_blank">You can download the PDF version via this link</a></p>
                 </div>
             </main>
@@ -121,7 +121,7 @@
 
         <div id="footer">
             <footer>
-                <p>Copyright &copy; 2021 Quinn Khuc.</p>
+                <p>Check out the code for this website on <a href="https://github.com/quinnkhuc/IDM222-qtk23" target="_blank" class="link">GitHub</a></p>
             </footer>
         </div>
     </div>
