Add style to the ordinary project, change header to sticky

--- a/index.html
+++ b/index.html
@@ -22,16 +22,15 @@
                     <h2>My work</h2>
                     <div id="projects">
                         <figure>
-                        <img srcset="images/the-ordinary-mockup-large.jpg  900w,
-                                images/the-ordinary-mockup-medium.jpg  600w,
-                                images/the-ordinary-mockup-small.jpg 350w"
-                            sizes="(min-width: 768px) 50vw,
-                                100vw"
-                            src="images/the-ordinary-mockup-small.jpg"
-                        alt="The Ordinary Project Mockup"/>
-                        <figcaption>The Ordinary</figcaption>
-                    </figure>
-                    <a href="the-ordinary.html">
+                            <img srcset="images/the-ordinary-mockup-large.jpg  900w,
+                                    images/the-ordinary-mockup-medium.jpg  600w,
+                                    images/the-ordinary-mockup-small.jpg 350w"
+                                sizes="(min-width: 768px) 50vw,
+                                    100vw"
+                                src="images/the-ordinary-mockup-small.jpg"
+                            alt="The Ordinary Project Mockup"/>
+                            <figcaption>The Ordinary</figcaption>
+                        </figure>
                         <figure>
                             <img srcset="images/the-ordinary-mockup-large.jpg  900w,
                                     images/the-ordinary-mockup-medium.jpg  600w,
@@ -42,7 +41,18 @@
                             alt="The Ordinary Project Mockup"/>
                             <figcaption>The Ordinary</figcaption>
                         </figure>
-                    </a>
+                        <a href="the-ordinary.html">
+                            <figure>
+                                <img srcset="images/the-ordinary-mockup-large.jpg  900w,
+                                        images/the-ordinary-mockup-medium.jpg  600w,
+                                        images/the-ordinary-mockup-small.jpg 350w"
+                                    sizes="(min-width: 768px) 50vw,
+                                        100vw"
+                                    src="images/the-ordinary-mockup-small.jpg"
+                                alt="The Ordinary Project Mockup"/>
+                                <figcaption>The Ordinary</figcaption>
+                            </figure>
+                        </a>
                     </div>
                 </div>
             </main>
