Fix grid in contact and index page

--- a/contact.html
+++ b/contact.html
@@ -19,19 +19,24 @@
                     <div id="instruction-social-media">
                         <p id="instruction">You can reach out to me by using the contact form, or through any of the following social media platform:</p>
                         <ul id="social-media">
-                            <li class="list">Email: <a class="link" href="mailto:qtk23@drexel.edu">qtk23@drexel.edu</a></li>
-                            <li class="list">GitHub: <a class="link" href="https://github.com/quinnkhuc" target="_blank">github.com/quinnkhuc</a></li>
-                            <li class="list">Instagram: <a class="link" href="https://www.instagram.com/qtk05_/" target="_blank">instagram.com/qtk05_</a></li>
-                            <li class="list">LinkedIn: <a class="link" href="https://www.linkedin.com/in/quinnkhuc/" target="_blank">linkedin.com/in/quinnkhuc</a></li>
+                            <li class="list"><a class="link" href="https://github.com/quinnkhuc" target="_blank">GitHub</a></li>
+                            <li class="list"><a class="link" href="https://www.instagram.com/qtk05_/" target="_blank">Instagram</a></li>
+                            <li class="list"><a class="link" href="https://www.linkedin.com/in/quinnkhuc/" target="_blank">lLinkedIn</a></li>
                         </ul>
                     </div>
                     <form>
-                        <lable for="name">Name:</lable>
-                        <input type="text" name="name" id="name" required>
-                        <lable for="email">Email:</lable>
-                        <input type="text" name="email" id="email" required>
-                        <lable for="message">Message:</lable>
-                        <input type="text" name="message" id="message" required>
+                        <div id="name-div">
+                            <lable for="name">Name:</lable>
+                            <input type="text" name="name" id="name" required>
+                        </div>
+                        <div id="email-div">
+                            <lable for="email">Email:</lable>
+                            <input type="text" name="email" id="email" required>
+                        </div>
+                        <div id="message-div">
+                            <lable for="message">Message:</lable>
+                            <input type="text" name="message" id="message" required>
+                        </div>
                         <input type="submit" value="Submit" id="submit-button">
                     </form>
                 </div>
