Add Genshin Zodiac project, fix flex gap issue

--- a/contact.html
+++ b/contact.html
@@ -21,21 +21,21 @@
                         <ul id="social-media">
                             <li class="list"><a class="link" href="https://github.com/quinnkhuc" target="_blank">GitHub</a></li>
                             <li class="list"><a class="link" href="https://www.instagram.com/qtk05_/" target="_blank">Instagram</a></li>
-                            <li class="list"><a class="link" href="https://www.linkedin.com/in/quinnkhuc/" target="_blank">lLinkedIn</a></li>
+                            <li class="list"><a class="link" href="https://www.linkedin.com/in/quinnkhuc/" target="_blank">LinkedIn</a></li>
                         </ul>
                     </div>
-                    <form>
+                    <form action="mailto:qtk23@drexel.edu" method="POST" enctype="text/plain">
                         <div id="name-div">
-                            <lable for="name">Name:</lable>
-                            <input type="text" name="name" id="name" required>
+                            <lable for="Name">Name:</lable>
+                            <textarea name="Name" id="name" required></textarea>
                         </div>
                         <div id="email-div">
-                            <lable for="email">Email:</lable>
-                            <input type="text" name="email" id="email" required>
+                            <lable for="Email">Email:</lable>
+                            <textarea name="Email" id="email" required></textarea>
                         </div>
                         <div id="message-div">
-                            <lable for="message">Message:</lable>
-                            <input type="text" name="message" id="message" required>
+                            <lable for="Message">Message:</lable>
+                            <textarea name="Message" id="message" required></textarea>
                         </div>
                         <input type="submit" value="Submit" id="submit-button">
                     </form>
@@ -51,19 +51,16 @@
                 <nav>
                     <ul>
                         <li>
-                            <a href="index.html">HOME</a>
+                            <a href="index.html" class="nav-with-gap">HOME</a>
                         </li>
                         <li>
-                            <a href="resume.html">RESUME</a>
+                            <a href="resume.html" class="nav-with-gap">RESUME</a>
                         </li>
                         <li>
                             <a href="contact.html" class="active-page">CONTACT</a>
                         </li>
                     </ul>
                 </nav>
-                <div id="hamburger-menu">
-                    <img src="images/hamburger-menu.png" alt="Hamburger Menu"/>
-                </div>
             </header>
         </div>
 
