--- a/the-ordinary.html
+++ b/the-ordinary.html
@@ -163,7 +163,7 @@
     
                         <div id="typography">
                             <p>
-                                The font that I chose for my final design is Roboto, and the reason for this was that Roboto looked similar to the font used on the brand’s logo, as well as tt was also simple, unobtrusive, and easy on the eyes.
+                                The font that I chose for my final design is Roboto, and the reason for this was that Roboto looked similar to the font used on the brand’s logo, as well as it was also simple, unobtrusive, and easy on the eyes.
                             </p>
                             <figure>
                                 <img srcset="images/the-ordinary/typography-large.jpg  900w,
@@ -202,19 +202,16 @@
                 <nav>
                     <ul>
                         <li>
-                            <a href="index.html">HOME</a>
+                            <a href="index.html" class="nav-with-gap">HOME</a>
                         </li>
                         <li>
-                            <a href="resume.html">RESUME</a>
+                            <a href="resume.html" class="nav-with-gap">RESUME</a>
                         </li>
                         <li>
                             <a href="contact.html">CONTACT</a>
                         </li>
                     </ul>
                 </nav>
-                <div id="hamburger-menu">
-                    <img src="images/hamburger-menu.png" alt="Hamburger Menu"/>
-                </div>
             </header>
         </div>
 
