--- a/index.html
+++ b/index.html
@@ -21,26 +21,32 @@
                 <div id="portfolio">
                     <h2>My work</h2>
                     <div id="projects">
-                        <figure>
-                            <img srcset="images/the-ordinary-mockup-large.jpg  900w,
-                                    images/the-ordinary-mockup-medium.jpg  600w,
-                                    images/the-ordinary-mockup-small.jpg 350w"
-                                sizes="(min-width: 768px) 50vw,
-                                    100vw"
-                                src="images/the-ordinary-mockup-small.jpg"
-                            alt="The Ordinary Project Mockup"/>
-                            <figcaption>The Ordinary</figcaption>
-                        </figure>
                         <a href="the-ordinary.html">
                             <figure>
-                                <img srcset="images/the-ordinary-mockup-large.jpg  900w,
+                                <div>
+                                    <img srcset="images/the-ordinary-mockup-large.jpg  900w,
                                         images/the-ordinary-mockup-medium.jpg  600w,
                                         images/the-ordinary-mockup-small.jpg 350w"
-                                    sizes="(min-width: 768px) 50vw,
+                                        sizes="(min-width: 768px) 50vw,
                                         100vw"
-                                    src="images/the-ordinary-mockup-small.jpg"
-                                alt="The Ordinary Project Mockup"/>
+                                        src="images/the-ordinary-mockup-small.jpg"
+                                        alt="The Ordinary Project Mockup"/>
+                                </div>
                                 <figcaption>The Ordinary</figcaption>
+                            </figure>
+                        </a>
+                        <a href="IDM231-qtk23/genshin-zodiac.html">
+                            <figure>
+                                <div>
+                                    <img srcset="images/genshin-zodiac-mockup-large.jpg  900w,
+                                        images/genshin-zodiac-mockup-medium.jpg  600w,
+                                        images/genshin-zodiac-mockup-small.jpg 350w"
+                                        sizes="(min-width: 768px) 50vw,
+                                        100vw"
+                                        src="images/the-ordinary-mockup-small.jpg"
+                                        alt="Genshin Zodiac"/>
+                                </div>
+                                <figcaption>Genshin Zodiac</figcaption>
                             </figure>
                         </a>
                     </div>
@@ -56,19 +62,16 @@
                 <nav>
                     <ul>
                         <li>
-                            <a href="index.html" class="active-page">HOME</a>
+                            <a href="index.html" class="active-page nav-with-gap">HOME</a>
                         </li>
                         <li>
-                            <a href="resume.html">RESUME</a>
+                            <a href="resume.html" class="nav-with-gap">RESUME</a>
                         </li>
                         <li>
                             <a href="contact.html">CONTACT</a>
                         </li>
                     </ul>
                 </nav>
-                <div id="hamburger-menu">
-                    <img src="images/hamburger-menu.png" alt="Hamburger Menu"/>
-                </div>
             </header>
         </div>
 
