--- a/resume.html
+++ b/resume.html
@@ -103,19 +103,16 @@
                 <nav>
                     <ul>
                         <li>
-                            <a href="index.html">HOME</a>
+                            <a href="index.html" class="nav-with-gap">HOME</a>
                         </li>
                         <li>
-                            <a href="resume.html" class="active-page">RESUME</a>
+                            <a href="resume.html" class="active-page nav-with-gap">RESUME</a>
                         </li>
                         <li>
                             <a href="contact.html">CONTACT</a>
                         </li>
                     </ul>
                 </nav>
-                <div id="hamburger-menu">
-                    <img src="images/hamburger-menu.png" alt="Hamburger Menu"/>
-                </div>
             </header>
         </div>
 
